Fix(Realisations): Apply object-fir: cover to prevent stretched images

--- a/client/styles/_home.scss
+++ b/client/styles/_home.scss
@@ -478,7 +478,8 @@
             position: absolute;
             height: 100%;
             width: 100%;
-            transition: filter 0.6s;
+            transition: filter 0.6;
+	    object-fit: cover;
           }
         }
 
